--- a/blog.html
+++ b/blog.html
@@ -25,6 +25,8 @@
     <link rel="stylesheet" href="assets/css/dark.css">
     <!-- Responsive CSS -->
     <link rel="stylesheet" href="assets/css/responsive.css">
+
+    <script src="assets/js/blogFromJson.js"></script>
     <!-- Title CSS -->
     <title>ABAF Shipping</title>
     <!-- Favicon Link -->
@@ -218,8 +220,8 @@
                     a own blind you ago hand.</p>
             </div>
 
-            <div class="row">
-                <div class="col-lg-4 col-sm-6 wow animate__animated animate__fadeInUp" data-wow-duration="1s">
+            <div class="row blogItems">
+                <!-- <div class="col-lg-4 col-sm-6 wow animate__animated animate__fadeInUp" data-wow-duration="1s">
                     <div class="blog-card">
                         <div class="blog-img">
                             <a href="blog-details.html"><img src="assets/img/blog/1.png" alt="blog image"></a>
@@ -244,147 +246,7 @@
                             </div>
                         </div>
                     </div>
-                </div>
-
-                <div class="col-lg-4 col-sm-6 wow animate__animated animate__fadeInUp" data-wow-duration="1s"
-                    data-wow-delay=".1s">
-                    <div class="blog-card">
-                        <div class="blog-img">
-                            <a href="blog-details.html"><img src="assets/img/blog/2.png" alt="blog image"></a>
-                        </div>
-                        <div class="blog-text">
-                            <h3>
-                                <a href="blog-details.html">New Vehicles in the Fleet – See Our New Scania Trucks</a>
-                            </h3>
-                            <ul>
-                                <li>
-                                    <i class="icofont-ui-calendar"></i>
-                                    02 April, 2021
-                                </li>
-                            </ul>
-                            <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum
-                                has been the industry's.</p>
-
-                            <div class="blog-btn text-left">
-                                <a href="#">
-                                    <i class="icofont-rounded-double-right"></i>
-                                </a>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-
-                <div class="col-lg-4 col-sm-6 wow animate__animated animate__fadeInUp" data-wow-duration="1s"
-                    data-wow-delay=".2s">
-                    <div class="blog-card">
-                        <div class="blog-img">
-                            <a href="blog-details.html"><img src="assets/img/blog/3.png" alt="blog image"></a>
-                        </div>
-                        <div class="blog-text">
-                            <h3>
-                                <a href="blog-details.html">Exporters Achieve Cost Savings Throughout sale</a>
-                            </h3>
-                            <ul>
-                                <li>
-                                    <i class="icofont-ui-calendar"></i>
-                                    03 April, 2021
-                                </li>
-                            </ul>
-                            <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum
-                                has been the industry's.</p>
-
-                            <div class="blog-btn text-left">
-                                <a href="#">
-                                    <i class="icofont-rounded-double-right"></i>
-                                </a>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-
-                <div class="col-lg-4 col-sm-6 wow animate__animated animate__fadeInUp" data-wow-duration="1s"
-                    data-wow-delay=".3s">
-                    <div class="blog-card">
-                        <div class="blog-img">
-                            <a href="blog-details.html"><img src="assets/img/blog/6.png" alt="blog image"></a>
-                        </div>
-                        <div class="blog-text">
-                            <h3>
-                                <a href="blog-details.html">Our Driver Confirm Lorry Repaired as soon as Possible</a>
-                            </h3>
-                            <ul>
-                                <li>
-                                    <i class="icofont-ui-calendar"></i>
-                                    04 April, 2021
-                                </li>
-                            </ul>
-                            <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum
-                                has been the industry's.</p>
-
-                            <div class="blog-btn text-left">
-                                <a href="#">
-                                    <i class="icofont-rounded-double-right"></i>
-                                </a>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-
-                <div class="col-lg-4 col-sm-6 wow animate__animated animate__fadeInUp" data-wow-duration="1s"
-                    data-wow-delay=".4s">
-                    <div class="blog-card">
-                        <div class="blog-img">
-                            <a href="blog-details.html"><img src="assets/img/blog/5.png" alt="blog image"></a>
-                        </div>
-                        <div class="blog-text">
-                            <h3>
-                                <a href="blog-details.html">Deliveright Logistics Expands Service to West</a>
-                            </h3>
-                            <ul>
-                                <li>
-                                    <i class="icofont-ui-calendar"></i>
-                                    05 April, 2021
-                                </li>
-                            </ul>
-                            <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum
-                                has been the industry's.</p>
-
-                            <div class="blog-btn text-left">
-                                <a href="#">
-                                    <i class="icofont-rounded-double-right"></i>
-                                </a>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-
-                <div class="col-lg-4 col-sm-6 wow animate__animated animate__fadeInUp" data-wow-duration="1s"
-                    data-wow-delay=".5s">
-                    <div class="blog-card">
-                        <div class="blog-img">
-                            <a href="blog-details.html"><img src="assets/img/blog/4.png" alt="blog image"></a>
-                        </div>
-                        <div class="blog-text">
-                            <h3>
-                                <a href="blog-details.html">Software May Be Best Bet to Conquer Final Mile</a>
-                            </h3>
-                            <ul>
-                                <li>
-                                    <i class="icofont-ui-calendar"></i>
-                                    06 April, 2021
-                                </li>
-                            </ul>
-                            <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum
-                                has been the industry's.</p>
-
-                            <div class="blog-btn text-left">
-                                <a href="#">
-                                    <i class="icofont-rounded-double-right"></i>
-                                </a>
-                            </div>
-                        </div>
-                    </div>
-                </div>
+                </div> -->
             </div>
         </div>
     </section>
